src/App.css
#root {
  max-width: 1280px;
  margin: 0 auto;
  padding: 2rem;
  text-align: center;
  justify-content: center;
  align-items: center;
  min-height: 100vh;
}

input {
  width: 15em;
  height: 20px;
  border: 1px solid rgba(189, 189, 189, 0.87);
  border-radius: 0.3em;
  background-color: #212121;
  padding: 0.25rem;
  color: rgba(255, 255, 255, 0.87);
}

select {
  width: 15.75em;
  height: 2.3em;
  border: 1px solid rgba(189, 189, 189, 0.87);
  border-radius: 0.3em;
  background-color: #212121;
  padding: 0.25rem;
  color: rgba(255, 255, 255, 0.87);
}

ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

li {
  color: rgba(255, 255, 255, 0.87);
  border-color: rgba(255, 255, 255, 0.87);
  border-radius: 6px;
  background-color: #212121;
  box-shadow: 0 0 10px 0 rgba(26, 26, 26, 0.1);
  height: 40px;
  width: 209px;
  text-align: justify;
  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
  font-size: 1.2em;
  margin: 2px;
  margin-bottom: 6px;
  vertical-align: middle;
}

.MuiOutlinedInput-notchedOutline {
  border-width: 1px !important;
  border-color: rgba(255, 255, 255, 0.87) !important;
}

.Mui-focused .MuiOutlinedInput-notchedOutline {
  border-color: rgba(255, 255, 255, 0.87) !important;
}

.optionContainter {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-content: center;
  align-items: center;
  width: fit-content;
  border-radius: 10px;
  margin: 8px;
  box-shadow: 0 0 10px 0 rgba(26, 26, 26, 0.3);
  padding: 0.25rem;
  background-color: white;
}

.ratesOptionContainter {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-content: center;
  align-items: center;
  width: fit-content;
  height: fit-content;
  border-radius: 10px;
  margin: 5px;
  margin-top: 8.5px;
  margin-left: 8px;
  box-shadow: 0 0 10px 0 rgba(26, 26, 26, 0.3);
  padding: 0.25rem;
  padding-bottom: 0;
  background-color: white;
}

#mainContainer {
  height: 100vh;
}

#currencyRowContainer {
  display: flex;
  justify-content: center;
  align-items: center;
}

#currencyRatesContainer {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: start;
  margin-top: 26px;
  padding-right: 3px;
}

.equals {
  color: rgba(255, 255, 255, 0.87);
  font-weight: bold;
  font-size: 5rem;
  bottom: 5px;
  position: relative;
}

#equalsRates {
  position: relative;
  bottom: 30px;
  z-index: 0;
}

.fi {
  height: 17px;
  margin-right: 3px;
  position: relative;
  bottom: 0.7px;
}

.exchangeRate {
  text-align: right;
  margin-right: 20px;
  margin-left: 12px;
}

.MuiSelect-select {
  position: relative;
  /* bottom: 20px; */
  height: 222px;
}

button {
  z-index: 10;
}

#contentContainer {
  padding-top: 1.7em;
  padding-bottom: 2em;
  border-radius: 10px;
  background-color: #333;
  width: 80%;
  max-width: 700px;
  margin-left: auto;
  margin-right: auto;
}

#buttonContainer {
  margin-bottom: 20px;
}

.MuiSelect-select {
  background-color: aliceblue;
}

.ratesList {
  display: flex;
  align-items: center;
}

/* .css-h4y409-MuiList-root {
  padding: 0 !important;
  padding-top: 4 !important;
} */

@media (max-width: 700px) {
  #currencyRowContainer {
    flex-direction: column;
    align-content: center;
    justify-content: center;
    align-items: center;
  }

  #currencyRatesContainer {
    flex-direction: column;
    align-items: center;
  }

  #equalsRates {
    position: relative;
    bottom: 0;
    z-index: 0;
    margin-top: -35px;
    margin-bottom: -20px;
  }
}

@media (max-width: 400px) {
  #contentContainer {
    width: 100%;
  }
}

